--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@nestjs/graphql": "^13.2.3",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "dataloader": "^2.2.3",
     "graphql": "^16.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
